# rust-axum-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
data/: dict.fst
docs/: api-reference.md
src/: error.rs  handlers.rs  lib.rs  main.rs
src/error/: mod.rs
src/handlers/: graceful_shutdown.rs  mod.rs  search.rs
src/models/: mod.rs  search_models.rs
